[gd_scene load_steps=10 format=2]

[ext_resource path="res://GodotActionRPG-Assets/Models/Sword.dae" type="PackedScene" id=1]
[ext_resource path="res://Player/Pivote.gd" type="Script" id=2]
[ext_resource path="res://Player/Player.gd" type="Script" id=3]
[ext_resource path="res://UI/UI.tscn" type="PackedScene" id=4]
[ext_resource path="res://UI/UI.gd" type="Script" id=5]

[sub_resource type="CapsuleMesh" id=1]
radius = 0.5

[sub_resource type="CapsuleShape" id=2]
radius = 0.5

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( -2.95671e-06, 90, 107.278 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "attack"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 1.81756e-06, 90, -1.529 ), Vector3( -2.95671e-06, 90, 107.278 ) ]
}

[node name="Player" type="KinematicBody" groups=["Player"]]
script = ExtResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1, 0 )
mesh = SubResource( 1 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1, 0 )
shape = SubResource( 2 )

[node name="Pivote" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
script = ExtResource( 2 )

[node name="Camera" type="Camera" parent="Pivote"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -1, 1, -5 )
current = true

[node name="WeaponHolder" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.58, 1, 0.035 )

[node name="Sword" parent="WeaponHolder" instance=ExtResource( 1 )]
transform = Transform( -5.44395e-09, 8.55987e-09, 0.15, 0.143231, -0.0445512, 7.74065e-09, 0.0445512, 0.143231, -6.55671e-09, 0, 0, 2.6077e-08 )

[node name="SwordAnimator" type="AnimationPlayer" parent="WeaponHolder"]
root_node = NodePath("../Sword")
anims/RESET = SubResource( 3 )
anims/attack = SubResource( 4 )

[node name="AttackRayCast" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.3, 1, 0.6 )
enabled = true
cast_to = Vector3( 0, 0, 1.5 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" parent="CanvasLayer" instance=ExtResource( 4 )]
script = ExtResource( 5 )

[editable path="CanvasLayer/UI"]
